// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckboxPresenter renders with all props 1`] = `
.emotion-6 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  height: 16px;
  width: 16px;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: none;
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

.emotion-5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: none;
  background-color: #808080;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
  opacity: 0.4;
  box-shadow: none;
  pointer-events: none;
}

.emotion-5 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-5 svg * {
  fill: #ffffff;
}

.emotion-2 {
  display: block;
}

<div
  className="emotion-6"
>
  <input
    checked={true}
    className="emotion-0"
    disabled={true}
    label="HELLO"
    name="checkbox"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    onMouseUp={undefined}
    type="checkbox"
    value="value"
  />
  <span
    className="emotion-5"
  >
    <span
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        height="16px"
        viewBox="0 0 16 16"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkbox-checked-16
        </title>
        <path
          d="M3.55 8.45l1.12-1.16L6.7 9.23l4.6-4.74 1.15 1.14-5.73 5.88-3.17-3.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-4"
    >
      <svg
        className="emotion-1"
        height="2px"
        viewBox="0 0 8 2"
        width="8px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Rectangle 11
        </title>
        <path
          d="M0 0h8v2H0z"
          fill="#FFF"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`checkbox/presenters/CheckboxPresenter renders without props 1`] = `
.emotion-6 {
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  height: 16px;
  width: 16px;
}

.emotion-0 {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  padding: 0;
  margin: 0;
}

.emotion-5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  color: transparent;
  border: 1px solid rgba(128,128,128,0.5);
  background-color: transparent;
  text-align: center;
  font-size: 25px;
  line-height: 14px;
  height: 16px;
  width: 16px;
  border-radius: 0;
  cursor: default;
}

.emotion-5 svg {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  pointer-events: none;
}

.emotion-5 svg * {
  fill: #ffffff;
}

.emotion-2 {
  display: none;
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  className="emotion-6"
>
  <input
    checked={false}
    className="emotion-0"
    disabled={false}
    name="checkbox"
    onBlur={undefined}
    onChange={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseDown={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    onMouseUp={undefined}
    type="checkbox"
    value="value"
  />
  <span
    className="emotion-5"
  >
    <span
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        height="16px"
        viewBox="0 0 16 16"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          checkbox-checked-16
        </title>
        <path
          d="M3.55 8.45l1.12-1.16L6.7 9.23l4.6-4.74 1.15 1.14-5.73 5.88-3.17-3.06z"
        />
      </svg>
    </span>
    <span
      className="emotion-2"
    >
      <svg
        className="emotion-1"
        height="2px"
        viewBox="0 0 8 2"
        width="8px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Rectangle 11
        </title>
        <path
          d="M0 0h8v2H0z"
          fill="#FFF"
          fillRule="evenodd"
        />
      </svg>
    </span>
  </span>
</div>
`;
